--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
             </a>
         </div>
         <div style="height:7%" class="ui fixed inverted menu">
-            <div style="width:80%" class="ui container"> 
+            <div style="width:90%" class="ui container"> 
                 <a href="#" class="right item"><i id="profilerank"></i><span id="profilename"></span></a>
+                <a id="signout" href="javascript:TestCall()" class="item">Sign Out</a>
             </div>
         </div>
     </body>
