--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@
                 <a id="signout" href="javascript:TestCall()" class="item">Sign Out</a>
             </div>
         </div>
+        <div style="height:100%" class="ui main text container">
+            
+        </div>
     </body>
 </html>
