--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
                 <a id="signout" href="javascript:TestCall()" class="item">Sign Out</a>
             </div>
         </div>
-        <div style="height:100%; max-width:900px !important; margin-top:6em;" class="ui main text container"></div>
+        <div style="height:100%; max-width:900px !important; margin-top:6em;" class="ui main text container" id="rot"></div>
     </body>
 </html>
